// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Evaluation View Test error in step evaluation 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="errorMsg error"
          >
            <div
              class="title"
            >
              errorSummaryText
            </div>
            <p>
              Failure to evaluate step
            </p>
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
          >
            common.policy.noPolicyEvalResult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Evaluation View Test failure responses 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="Layout--vertical StyledProps--main container shrink StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
          >
            <div
              class="StyledProps--font StyledProps--main scroll"
            />
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
          >
            common.policy.noPolicyEvalResult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Evaluation View Test renders snapshot 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="MANUAL_INTERVENTION"
          id="bp3-tab-title_step-details_MANUAL_INTERVENTION"
          role="tab"
          tabindex="0"
        >
          pipeline.failureStrategies.strategiesLabel.ManualIntervention
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_MANUAL_INTERVENTION"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
        role="tabpanel"
      >
        <div
          class="manualInterventionTab"
        >
          <div
            class="title"
          >
            common.PermissibleActions
          </div>
          <div
            class="actionRow"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-repeat StyledProps--main"
                  icon="repeat"
                >
                  <svg
                    data-icon="repeat"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      repeat
                    </desc>
                    <path
                      d="M14 6c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v2.05C16.18 1.6 13.29 0 10 0 4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10c0-.55-.45-1-1-1s-1 .45-1 1c0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8c2.53 0 4.77 1.17 6.24 3H15c-.55 0-1 .45-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.StageRollback
              </p>
              <input
                name="StageRollback"
                type="checkbox"
                value="StageRollback"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-delete StyledProps--main"
                  icon="delete"
                >
                  <svg
                    data-icon="delete"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      delete
                    </desc>
                    <path
                      d="M15 6a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10l3.29-3.29c.19-.18.3-.43.3-.71zm-5-6C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Ignore
              </p>
              <input
                name="Ignore"
                type="checkbox"
                value="Ignore"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-refresh StyledProps--main"
                  icon="refresh"
                >
                  <svg
                    data-icon="refresh"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      refresh
                    </desc>
                    <path
                      d="M19 1c-.55 0-1 .45-1 1v2.06C16.18 1.61 13.29 0 10 0 4.48 0 0 4.48 0 10c0 .55.45 1 1 1s1-.45 1-1c0-4.42 3.58-8 8-8 2.52 0 4.76 1.18 6.22 3H15c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 8c-.55 0-1 .45-1 1 0 4.42-3.58 8-8 8-2.52 0-4.76-1.18-6.22-3H5c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-2.06C3.82 18.39 6.71 20 10 20c5.52 0 10-4.48 10-10 0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Retry
              </p>
              <input
                name="Retry"
                type="checkbox"
                value="Retry"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsSuccess
              </p>
              <input
                name="MarkAsSuccess"
                type="checkbox"
                value="MarkAsSuccess"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-ban-circle StyledProps--main"
                  icon="ban-circle"
                >
                  <svg
                    data-icon="ban-circle"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      ban-circle
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm5 11H5c-.55 0-1-.45-1-1s.45-1 1-1h10c.55 0 1 .45 1 1s-.45 1-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Abort
              </p>
              <input
                name="Abort"
                type="checkbox"
                value="Abort"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
